# LabBREW

./: .gitignore  DATSERVICE_IMPLEMENTATION.md  README.md  fix_brewcan.py  package-lock.json  pyproject.toml  requirements.txt  run_FrontEndsupervisor.py  run_service_control.py  run_service_data.py  run_service_parameterDB.py  run_service_parameterDS.py  run_service_scenario.py  run_service_sheduler.py  run_supervisor.py  run_tool_DBEdit.py  test_bus_pwm.py  test_db_status.py  test_gateway_pwm_send.py  test_pcan_sender.py  test_pwm_simple.py  test_send_100pwm.py
BrewSupervisor/: run_api.py
Other/: test_data_service.py  (+2 more)
Services/parameterDB/: LOCKING.md  db_Editor.py  pyproject.toml  serviceDB.py  serviceDS.py
Services/parameterDB/parameterdb_core/: __init__.py  client.py  errors.py  expression.py  protocol.py
Services/parameterDB/parameterdb_core/plugin_ui/: __init__.py  paths.py  spec.py
Services/parameterDB/parameterdb_monitor/: app.py
Services/parameterDB/parameterdb_service/: __init__.py  engine.py  event_broker.py  loader.py  plugin_api.py  server.py  service.py  store.py  transducers.py
Services/parameterDB/parameterdb_service/api/: __init__.py  dispatcher.py  handlers_general.py  handlers_graph.py  handlers_parameters.py  handlers_plugins.py  handlers_streaming.py  handlers_transducers.py  validation.py
Services/parameterDB/parameterdb_service/persistence/: __init__.py  audit_log.py  snapshots.py
Services/parameterDB/parameterdb_sources/: __init__.py  admin_server.py  base.py  loader.py  repository.py  runner.py  service.py
Services/parameterDB/plugins/condition/: implementation.py  ui.py
Services/parameterDB/plugins/deadband/: implementation.py  ui.py
Services/parameterDB/plugins/derivative/: implementation.py  ui.py
Services/parameterDB/plugins/follow/: implementation.py  ui.py
Services/parameterDB/plugins/lowpass/: implementation.py  ui.py
Services/parameterDB/plugins/math/: implementation.py  ui.py
Services/parameterDB/plugins/median/: implementation.py  ui.py
Services/parameterDB/plugins/moving_average/: implementation.py  ui.py
Services/parameterDB/plugins/pid/: implementation.py  ui.py
Services/parameterDB/plugins/script/: implementation.py  ui.py
Services/parameterDB/plugins/static/: implementation.py  ui.py
Services/parameterDB/sourceDefs/: _ui_schema.py
Services/parameterDB/sourceDefs/brewtools/: service.py  ui.py
Services/parameterDB/sourceDefs/brewtools/brewtools_can/: __init__.py  can_id.py  domain.py  domain_codec.py  exceptions.py  factory.py
Services/parameterDB/sourceDefs/brewtools/brewtools_can/domain/: __init__.py  calibration.py  measurements.py  node_management.py  start_measurement.py
Services/parameterDB/sourceDefs/brewtools/transports/: __init__.py  base.py  kvaser.py  pcan_gateway.py
Services/parameterDB/sourceDefs/brewtools_kvaser/: service.py  ui.py
Services/parameterDB/sourceDefs/brewtools_kvaser/brewtools_can/: bodies.py  domain_factory.py  factory.py
Services/parameterDB/sourceDefs/brewtools_kvaser/brewtools_can/domain/: base.py  control.py  measurements.py
Services/parameterDB/sourceDefs/digital_twin/: __init__.py  service.py  ui.py
Services/parameterDB/sourceDefs/labps3005dn/: driver.py  service.py  ui.py
Services/parameterDB/sourceDefs/modbus_relay/: service.py  ui.py
Services/parameterDB/sourceDefs/papago_meteo/: __init__.py  service.py  ui.py
Services/parameterDB/sourceDefs/system_time/: service.py  ui.py
Services/parameterDB/sourceDefs/tilt_hydrometer/: service.py  ui.py
tests/: README.md  (+84 more)
(+314 files in other folders)
